# PIBIT-25-26---Unifica-o-de-anotacoes

./: Class_rotulacao.py  README.md  coco_to_yolo.py  convert.py  interface.py  pyproject.toml  requirements.txt  voc_to_yolo.py  yolo_to_coco.py
src/annotation_converter/: coco_to_yolo.py  convert.py  interface.py  main.py  voc_to_yolo.py  yolo_to_coco.py
